WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199825
Fix build warning because of missing super_class initializer
https://bugs.webkit.org/show_bug.cgi?id=199825
Summary
Fix build warning because of missing super_class initializer
Frédéric Wang Nélar
Reported
2019-07-16 03:43:29 PDT
This happens in WebKit/UIProcess/ios/WKContentView.mm when building iOS 13 with XCode beta and public SDK.
Attachments
Patch
(1.53 KB, patch)
2019-07-16 03:48 PDT
,
Frédéric Wang Nélar
no flags
Details
Formatted Diff
Diff
Patch
(1.54 KB, patch)
2019-07-16 12:07 PDT
,
Frédéric Wang Nélar
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2019-07-16 03:48:20 PDT
Created
attachment 374203
[details]
Patch
Jonathan Bedard
Comment 2
2019-07-16 11:09:57 PDT
Comment on
attachment 374203
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374203&action=review
> Source/WebKit/UIProcess/ios/WKContentView.mm:152 > + struct objc_super super { self, class_getSuperclass(object_getClass(self)) };
Looking through other code which set's struct values, seems that we prefer: struct objc_super super = { self, class_getSuperclass(object_getClass(self)) };
Frédéric Wang Nélar
Comment 3
2019-07-16 12:07:50 PDT
Created
attachment 374229
[details]
Patch
WebKit Commit Bot
Comment 4
2019-07-16 13:08:32 PDT
Comment on
attachment 374229
[details]
Patch Clearing flags on attachment: 374229 Committed
r247491
: <
https://trac.webkit.org/changeset/247491
>
WebKit Commit Bot
Comment 5
2019-07-16 13:08:34 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-07-16 13:09:15 PDT
<
rdar://problem/53167674
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug