Fix build warning because of missing super_class initializer https://bugs.webkit.org/show_bug.cgi?id=199825

Patch by Frederic Wang <fwang@igalia.com> on 2019-07-16
Reviewed by Jonathan Bedard.

* UIProcess/ios/WKContentView.mm:
(keyCommandsPlaceholderHackForEvernote):

Canonical link: https://commits.webkit.org/213715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247491 268f45cc-cd09-0410-ab3c-d52691b4dbfc